# orbital-screener

./: .gitignore
cpp/: CMakeLists.txt
cpp/src/: main.cpp
python/: build_cdm.py  build_dataset.py  feature_engineering.py  fetch_tles.py  tempCodeRunnerFile.py  test_dataset.py  validate_propogation.py
python/api/: main.py
python/model/: dataset.py  evaluvate.py  model.py  train.py
